tests/errors/runtime.KeyNotFound.res
John
Doe

══╡ Index Error ╞═════════════════════════════════════════════════════════════════════════════════════════ <script> ══

  Cannot resolve requested index

  Key not found: 
      country
  
  For value:
      [ :dictionary
              name     :        John :string
              surname  :        Doe :string
              age      :        34 :integer
      ]

  ┃ File: tests/errors/runtime.KeyNotFound.art
  ┃ Line: 9
  ┃ 
  ┃    7 ║  print dict\name
  ┃    8 ║  print dict\surname
  ┃    9 ║► print dict\country
  ┃   10 ║  print dict\age

  Hint: Perhaps you meant... surname ?
                       or... age ?
                       or... name ?